2015-10-13  Per Bothner  <per@bothner.com>

	* Language.java (mangleName): Allow any-case letter after '-'.

2015-10-12  Per Bothner  <per@bothner.com>

	* Declaration.java (load): Do better coercion if loading from
	indirect-binding - specifically handle primitive types.

2015-10-07  Per Bothner  <per@bothner.com>

	* AbstractScriptEngineFactory.java (BindingsLocation.get):
	Fix in the obvious way Savannah bug #45679 "Mention offending symbol
	name when throwing UnboundLocationException".

2015-10-05  Per Bothner  <per@bothner.com>

	* ModuleInfo.java (checkCurrent): If moduleClass is null, it
	may be because it was been compiled and written - but not loaded.
	So don't automatically assume it's not current.

2015-10-04  Per Bothner  <per@bothner.com>

	* ModuleInfo.java (setupModuleExp): Only use current value as
	literal if field is final.

2015-09-30  Per Bothner  <per@bothner.com>

	* Compilation.java (mangleSymbolic): Fix thinko.
	* ModuleManager.java (interactiveClassPrefix, evalClassPrefix):
	Change to values that don't get mangled by mangleSymbolic.

2015-09-30  Per Bothner  <per@bothner.com>

	Change to mangle class and package name in "Symbolic Freedom" style.
	See https://blogs.oracle.com/jrose/entry/symbolic_freedom_in_the_vm
	Note this is currently *only* used for class and package names.
	* Compilation.java (mangleSymbolic, demangleSymbolic): New methods.
	(mangleClassName, mangleQualifiedName): Change to use new methods.
	(generateClassName): Use mangleClassName.
	* ClassExp.java: Use mangleClassName.

2015-09-29  Per Bothner  <per@bothner.com>

	* Declaration.java (load): Add cast if loading from Location.
	* ReferenceExp.java (calculateType): More precise result if fluid.

2015-09-28  Per Bothner  <per@bothner.com>

	* Declaration.java (makeField): Better field type if indirect-binding.

2015-09-20  Per Bothner  <per@bothner.com>

	* Declaration.java (SYNCHRONIZED_ACCESS, STRICTFP_ACCESS): New flags.
	(METHOD_ACCESS_FLAGS): Include new flags.
